* fixed an issue that would cause UDP to not work properly when scanning subnet ranges
* improved handling and descriptions in mssql
* fixed error in mssql bruter error handling exception
* fixed an issue that would cause TDS to error out when directly connecting to MSSQL server
* removed impacket TDS from src.core and added impacket.tds
* updated requirements.txt for impacket

~~~~~~~~~~~~~~~~
version 7.3.3
~~~~~~~~~~~~~~~~

* code audit and cleanup (much appreciated Cabalist)
* fixed set.options error if file isnt found

~~~~~~~~~~~~~~~~
version 7.3.2
~~~~~~~~~~~~~~~~

* fixed an issue if python-requests was not installed it would bomb the module and SET out

~~~~~~~~~~~~~~~~
version 7.3.1
~~~~~~~~~~~~~~~~

* PR for better python3 and pep8 handling - (thanks Cabalist)
* added better handling around SMS spoofing and if legacy version of openssl is around
* updated requirements.txt
* added setdir definition from setdir to core.setdir on setoolkit
* removed old version of Signed_update.jar.orig, updated .gitignore to include .jar, and removed old version of unsigned.jar

~~~~~~~~~~~~~~~~
version 7.3
~~~~~~~~~~~~~~~~

* completely rewrote the SMS spoofing module from scratch to use spoofmytextmessage.com which the folks over there are super helpful and provided an undocumented API to be used within SET. This now works great and has been extensively tested.
* sped up the load process when using the main menu system the loading would pull from github each time the show_banner() function was called - this only loads once per SET load now
* fixed a string integer error from input to raw_input in the RDP DOS use after free in exploits
* added libapache2-mod-php to setup.py - needed for credential harvester
* added python-requests to setup.py - needed for sms spoofing
* added better check for python-requests in sms spoofing
* added better formating within sms spoofing
* added error handling to sms spoofing if something goes wrong during auth process